--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../static/css/navbar.css">
+    {% include 'bootstrap_css.html' %}
 </head>
-<body>
-    <h1>This is Index Page</h1>
+<body id="body">
+    {% include 'navbar.html' %}
+
+
+    {% include 'bootstrap_js.html' %}
+    <script src="../static/js/navbar.js"></script>
 </body>
 </html>
