--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,119 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Maruthi</title>
     <link rel="stylesheet" href="../static/css/navbar.css">
+    <link rel="stylesheet" href="../static/css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     {% include 'bootstrap_css.html' %}
 </head>
 <body id="body">
     {% include 'navbar.html' %}
 
+    <div class="banner-container">
+        <img src="../static/images/banner.jpg" alt="banner image" class="banner-img">
+        <div class="banner-greatings">
+            <div class="greet">
+                <h1>Experience Greatest <br>Shopping Ever</h1>
+                <h4>Valuable Discount on all products</h4>
+                <h4>Off upto 50%</h4>
+            </div>
+        </div>
+    </div>
+
+    <section class="hr-container">
+        <h2>Hot Deals</h2>
+        <div class="product-list-hr">
+            <div class="card">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+            <div class="card">
+                <img src="../static/images/Untitled design.png" alt="product">
+            </div>
+            <div class="card">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+            <div class="card">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+            <div class="card">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+        </div>
+    </section>
+
+    <section class="hr-container">
+        <h2>Hot Deals</h2>
+        <div class="product-list-hr">
+            <div class="card">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+            <div class="card">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+            <div class="card">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+            <div class="card">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+            <div class="card">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+        </div>
+    </section>
+
+
+    <div class="vr-container">
+        <div class="product-list-vr">
+            <h2>Container 1</h2>
+            <div class="product-grid">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+        </div>
+        <div class="product-list-vr">
+            <h2>Container 1</h2>
+            <div class="product-grid">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+        </div>
+        <div class="product-list-vr">
+            <h2>Container 1</h2>
+            <div class="product-grid">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+        </div>
+    </div>
+
+    <section class="hr-container">
+        <h2>Hot Deals</h2>
+        <div class="product-list-hr">
+            <div class="card">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+            <div class="card">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+            <div class="card">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+            <div class="card">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+            <div class="card">
+                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+        </div>
+    </section>
 
     {% include 'bootstrap_js.html' %}
     <script src="../static/js/navbar.js"></script>
