--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,15 +11,17 @@
         <div>
             <nav class="nav-link">
                 <ul>
-                    <li><a href="#">Mens</a></li>
-                    <li><a href="#">Women</a></li>
-                    <li><a href="#">kids</a></li>
-                    <li><a href="#">Gadgets</a></li>
+                    <li><a href="#">Dress</a></li>
+                    <li><a href="#">Mobiles</a></li>
+                    <li><a href="#">Electronics</a></li>
+                    <li><a href="#">Shoes</a></li>
+                    <li><a href="#">Toys</a></li>
                 </ul>
             </nav>
         </div>
         <div class="nav-button">
             <a href="#" id="login-btn">Login</a>
+            <a href="#" id="cart-icon"><i class="fas fa-cart-shopping"></i>&Tab;Cart</a>
         </div>
     </div>
 </header>
