--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -35,16 +35,21 @@
 .nav-link li a{
     text-decoration: none;
     color: black;
+    font-weight: 600;
 }
 
 .nav-button{
     padding-top: .9rem;
 }
 
+.nav-button a:first-child{
+    margin-right: 1rem;
+}
+
 #login-btn{
     text-decoration: none;
-    background-color: rgb(96, 96, 255);
     border: none;
+    background-color: rgb(96, 96, 255);
     color: white;
     padding: .5rem 2rem;
     border-radius: 2rem;
@@ -81,6 +86,23 @@
    display: none;
 }
 
+#cart-icon{
+    text-decoration: none;
+    color: black;
+}
+
+@media (max-width:450px) {
+    #logo img{
+        height: 2.2rem;
+    }
+    .hamburger-box{
+        height: 1.92rem;
+        width: 2.5rem;
+        gap: .36rem;
+        margin-top: -1.9rem;
+    }
+}
+
 
 @media (max-width:600px) {
     .hamburger-box{
@@ -100,32 +122,62 @@
         display: flex;
     }
     .nav-button{
+        align-items: center;
         justify-content: center;
-        margin-left: 2rem;
         padding-bottom: 1rem;
+        gap: 1.3rem;
     }
     .nav-button{
         display: none;
     }
     .nav-button.active{
         display: flex;
+        flex-direction: column;
     }
     #login-btn{
         padding: .5rem 1rem;
+        margin-left: 3rem;
+    }
+    #cart-icon{
+        margin-left: 1.2rem;
     }
     .nav-bar{
         margin: 0 1rem;
     }
     .nav-link ul{
-        gap: 2rem;
+        gap: 1.3rem;
     }
 }
 
-@media (min-width:601px) and (max-width: 810px) {
-    .nav-bar{
-        margin: 0 2rem;
+@media (min-width:601px) and (max-width:700px) {
+    .nav-link ul{
+        gap: 1rem;
     }
+    .nav-bar{
+        margin: 0 1rem;
+    }
+    #login-btn{
+        padding: .5rem 1rem;
+    }
+    .nav-button a:first-child{
+        margin-right: 0;
+    }
+}
 
+@media (min-width:701px) and (max-width: 810px) {
+    .nav-bar{
+        margin: 0 1rem;
+    }
+    #login-btn{
+        padding: .5rem 1.4rem;
+    }
+    .nav-link ul{
+        gap: 1.5rem;
+    }
+    
+}
+
+@media (min-width:811px) and (max-width:920px) {
     .nav-link ul{
         gap: 1.5rem;
     }
