--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>Maruthi</title>
     <link rel="stylesheet" href="../static/css/navbar.css">
     <link rel="stylesheet" href="../static/css/index.css">
+    <link rel="stylesheet" href="../static/css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     {% include 'bootstrap_css.html' %}
 </head>
@@ -68,7 +69,7 @@
 
     <div class="vr-container">
         <div class="product-list-vr">
-            <h2>Container 1</h2>
+            <h2>Hot deals</h2>
             <div class="product-grid">
                 <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
                 <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
@@ -77,7 +78,7 @@
             </div>
         </div>
         <div class="product-list-vr">
-            <h2>Container 1</h2>
+            <h2>Hot deals</h2>
             <div class="product-grid">
                 <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
                 <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
@@ -86,7 +87,7 @@
             </div>
         </div>
         <div class="product-list-vr">
-            <h2>Container 1</h2>
+            <h2>Hot deals</h2>
             <div class="product-grid">
                 <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
                 <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
@@ -116,6 +117,8 @@
             </div>
         </div>
     </section>
+
+    {% include 'footer.html'%}
 
     {% include 'bootstrap_js.html' %}
     <script src="../static/js/navbar.js"></script>
