--- a/templates/footer.html
+++ b/templates/footer.html
@@ -18,7 +18,7 @@
         <div class="footer-sub-cont">
             <ul>
                 <h5>Help</h5>
-                <a href="" target="_blank"><li>FAQS</li></a>
+                <a href="" target="_blank"><li>FAQ</li></a>
                 <a href="" target="_blank"><li>Cancellation and Refund</li></a>
                 <a href="" target="_blank"><li>Terms and Policies</li></a>
                 <a href="" target="_blank"><li>Shipping</li></a>
