--- a/templates/index.html
+++ b/templates/index.html
@@ -28,19 +28,70 @@
         <h2>Hot Deals</h2>
         <div class="product-list-hr">
             <div class="card">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/kids1.png" alt="product"></a>
             </div>
             <div class="card">
-                <img src="../static/images/Untitled design.png" alt="product">
+                <a href="{{url_for('products',name='Laptop')}}"><img src="../static/images/laptop1.png" alt="product"></a>
             </div>
             <div class="card">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Shoes')}}"><img src="../static/images/shoes1.png" alt="product"></a>
             </div>
             <div class="card">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Mobile')}}"><img src="../static/images/mobile1.png" alt="product"></a>
             </div>
             <div class="card">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Headphones')}}"><img src="../static/images/headphones1.png" alt="product"></a>
+            </div>
+        </div>
+    </section>
+
+    <section class="hr-container">
+        <h2>Top Offers</h2>
+        <div class="product-list-hr">
+            <div class="card">
+                <a href="{{url_for('products',name='Women')}}"><img src="../static/images/women1.png" alt="product"></a>
+            </div>
+            <div class="card">
+                <a href="{{url_for('products',name='Speakers')}}"><img src="../static/images/speaker1.png" alt="product"></a>
+            </div>
+            <div class="card">
+                <a href="{{url_for('products',name='College Bags')}}"><img src="../static/images/cbag1.png" alt="product"></a>
+            </div>
+            <div class="card">
+                <a href="{{url_for('products',name='Handbags')}}"><img src="../static/images/hbags.png" alt="product"></a>
+            </div>
+            <div class="card">
+                <a href="{{url_for('products',name='Men')}}"><img src="../static/images/men1.png" alt="product"></a>
+            </div>
+        </div>
+    </section>
+
+    <section class="vr-container">
+        <div class="product-list-vr">
+            <h2>Hot deals</h2>
+            <div class="product-grid">
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+        </div>
+        <div class="product-list-vr">
+            <h2>Hot deals</h2>
+            <div class="product-grid">
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
+            </div>
+        </div>
+        <div class="product-list-vr">
+            <h2>Hot deals</h2>
+            <div class="product-grid">
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
             </div>
         </div>
     </section>
@@ -49,76 +100,26 @@
         <h2>Hot Deals</h2>
         <div class="product-list-hr">
             <div class="card">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='T-shirts')}}"><img src="../static/images/tshirt1.png" alt="product"></a>
             </div>
             <div class="card">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
             </div>
             <div class="card">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
             </div>
             <div class="card">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
             </div>
             <div class="card">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-            </div>
-        </div>
-    </section>
-
-
-    <div class="vr-container">
-        <div class="product-list-vr">
-            <h2>Hot deals</h2>
-            <div class="product-grid">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-            </div>
-        </div>
-        <div class="product-list-vr">
-            <h2>Hot deals</h2>
-            <div class="product-grid">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-            </div>
-        </div>
-        <div class="product-list-vr">
-            <h2>Hot deals</h2>
-            <div class="product-grid">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-            </div>
-        </div>
-    </div>
-
-    <section class="hr-container">
-        <h2>Hot Deals</h2>
-        <div class="product-list-hr">
-            <div class="card">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-            </div>
-            <div class="card">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-            </div>
-            <div class="card">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-            </div>
-            <div class="card">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
-            </div>
-            <div class="card">
-                <a href=""><img src="../static/images/Untitled design.png" alt="product"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/Untitled design.png" alt="product"></a>
             </div>
         </div>
     </section>
 
     {% include 'footer.html'%}
+
+
 
     {% include 'bootstrap_js.html' %}
     <script src="../static/js/navbar.js"></script>
