--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -14,10 +14,6 @@
     flex-wrap: wrap;
 }
 
-/* .footer-sub-cont{
-    width: 23%;
-} */
-
 .footer-sub-cont li{
     list-style: none;
 }
@@ -32,4 +28,18 @@
     font-weight: 700;
 }
 
+@media (max-width:420px) {
+    .footer-sub-cont a{
+        font-size: .5rem;
+    }
+    
+    .footer-sub-cont ul h5{
+        font-size: .9rem;
+    }
+}
 
+@media (max-width:645px) {
+    .footer-cont{
+        margin: 0;
+    }
+}
