--- a/templates/index.html
+++ b/templates/index.html
@@ -28,19 +28,19 @@
         <h2>Hot Deals</h2>
         <div class="product-list-hr">
             <div class="card">
-                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/kids1.png" alt="Kids1"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/toys/kids1.png" alt="Kids1"></a>
             </div>
             <div class="card">
-                <a href="{{url_for('products',name='Laptop')}}"><img src="../static/images/laptop1.png" alt="laptop1"></a>
+                <a href="{{url_for('products',name='Laptop')}}"><img src="../static/images/laptops/laptop1.png" alt="laptop1"></a>
             </div>
             <div class="card">
-                <a href="{{url_for('products',name='Shoes')}}"><img src="../static/images/shoes1.png" alt="shoes1"></a>
+                <a href="{{url_for('products',name='Shoes')}}"><img src="../static/images/shoes/shoes1.png" alt="shoes1"></a>
             </div>
             <div class="card">
-                <a href="{{url_for('products',name='Mobile')}}"><img src="../static/images/mobile1.png" alt="mobile1"></a>
+                <a href="{{url_for('products',name='Mobile')}}"><img src="../static/images/mobiles/mobile1.png" alt="mobile1"></a>
             </div>
             <div class="card">
-                <a href="{{url_for('products',name='Headphones')}}"><img src="../static/images/headphones1.png" alt="headphones1"></a>
+                <a href="{{url_for('products',name='Headphones')}}"><img src="../static/images/headphones/headphones1.png" alt="headphones1"></a>
             </div>
         </div>
     </section>
@@ -49,19 +49,19 @@
         <h2>Top Offers</h2>
         <div class="product-list-hr">
             <div class="card">
-                <a href="{{url_for('products',name='Women')}}"><img src="../static/images/women1.png" alt="women1"></a>
+                <a href="{{url_for('products',name='Women')}}"><img src="../static/images/women/women1.png" alt="women1"></a>
             </div>
             <div class="card">
-                <a href="{{url_for('products',name='Speaker')}}"><img src="../static/images/speaker1.png" alt="speaker1"></a>
+                <a href="{{url_for('products',name='Speaker')}}"><img src="../static/images/speakers/speaker1.png" alt="speaker1"></a>
             </div>
             <div class="card">
-                <a href="{{url_for('products',name='CollegeBag')}}"><img src="../static/images/cbag1.png" alt="college bag 1"></a>
+                <a href="{{url_for('products',name='CollegeBag')}}"><img src="../static/images/collegebags/cbag1.png" alt="college bag 1"></a>
             </div>
             <div class="card">
-                <a href="{{url_for('products',name='Handbags')}}"><img src="../static/images/hbags1.png" alt="handbag 1"></a>
+                <a href="{{url_for('products',name='Handbags')}}"><img src="../static/images/handbags/hbags1.png" alt="handbag 1"></a>
             </div>
             <div class="card">
-                <a href="{{url_for('products',name='Men')}}"><img src="../static/images/men1.png" alt="men1"></a>
+                <a href="{{url_for('products',name='Men')}}"><img src="../static/images/men/men1.png" alt="men1"></a>
             </div>
         </div>
     </section>
@@ -70,28 +70,28 @@
         <div class="product-list-vr">
             <h2>Hot deals</h2>
             <div class="product-grid">
-                <a href="{{url_for('products',name='Watch')}}"><img src="../static/images/watch1.png" alt="watch1"></a>
-                <a href="{{url_for('products',name='Mobile')}}"><img src="../static/images/mobile2.png" alt="mobile2"></a>
-                <a href="{{url_for('products',name='Speaker')}}"><img src="../static/images/speaker2.png" alt="speaker2"></a>
-                <a href="{{url_for('products',name='CollegeBag')}}"><img src="../static/images/cbag2.png" alt="college bag 2"></a>
+                <a href="{{url_for('products',name='Watch')}}"><img src="../static/images/watches/watch1.png" alt="watch1"></a>
+                <a href="{{url_for('products',name='T-shirts')}}"><img src="../static/images/tshirts/tshirt1.png" alt="tshirt1"></a>
+                <a href="{{url_for('products',name='Speaker')}}"><img src="../static/images/speakers/speaker2.png" alt="speaker2"></a>
+                <a href="{{url_for('products',name='CollegeBag')}}"><img src="../static/images/collegebags/cbag2.png" alt="college bag 2"></a>
             </div>
         </div>
         <div class="product-list-vr">
             <h2>Hot deals</h2>
             <div class="product-grid">
-                <a href="{{url_for('products',name='Headphones')}}"><img src="../static/images/headphones2.png" alt="headphones2"></a>
-                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/kids2.png" alt="kids2"></a>
-                <a href="{{url_for('products',name='Men')}}"><img src="../static/images/men2.png" alt="men2"></a>
-                <a href="{{url_for('products',name='Women')}}"><img src="../static/images/women2.png" alt="women2"></a>
+                <a href="{{url_for('products',name='Headphones')}}"><img src="../static/images/headphones/headphones2.png" alt="headphones2"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/toys/kids2.png" alt="kids2"></a>
+                <a href="{{url_for('products',name='Men')}}"><img src="../static/images/men/men2.png" alt="men2"></a>
+                <a href="{{url_for('products',name='Women')}}"><img src="../static/images/women/women2.png" alt="women2"></a>
             </div>
         </div>
         <div class="product-list-vr">
             <h2>Hot deals</h2>
             <div class="product-grid">
-                <a href="{{url_for('products',name='Shoes')}}"><img src="../static/images/shoes2.png" alt="shoes2"></a>
-                <a href="{{url_for('products',name='T-shirts')}}"><img src="../static/images/tshirt2.png" alt="tshirt2"></a>
-                <a href="{{url_for('products',name='Handbags')}}"><img src="../static/images/hbags2.png" alt="handbag 2"></a>
-                <a href="{{url_for('products',name='Mobile')}}"><img src="../static/images/mobile3.png" alt="mobile3"></a>
+                <a href="{{url_for('products',name='Shoes')}}"><img src="../static/images/shoes/shoes2.png" alt="shoes2"></a>
+                <a href="{{url_for('products',name='Mobile')}}"><img src="../static/images/mobiles/mobile2.png" alt="mobile2"></a>
+                <a href="{{url_for('products',name='Handbags')}}"><img src="../static/images/handbags/hbags2.png" alt="handbag 2"></a>
+                <a href="{{url_for('products',name='Laptop')}}"><img src="../static/images/laptops/laptop2.png" alt="laptop2"></a>
             </div>
         </div>
     </section>
@@ -100,19 +100,19 @@
         <h2>Hot Deals</h2>
         <div class="product-list-hr">
             <div class="card">
-                <a href="{{url_for('products',name='T-shirts')}}"><img src="../static/images/tshirt1.png" alt="tshirt1"></a>
+                <a href="{{url_for('products',name='T-shirts')}}"><img src="../static/images/tshirts/tshirt2.png" alt="tshirt2"></a>
             </div>
             <div class="card">
-                <a href="{{url_for('products',name='Shoes')}}"><img src="../static/images/shoes3.png" alt="shoes3"></a>
+                <a href="{{url_for('products',name='Shoes')}}"><img src="../static/images/shoes/shoes3.png" alt="shoes3"></a>
             </div>
             <div class="card">
-                <a href="{{url_for('products',name='Laptop')}}"><img src="../static/images/laptop2.png" alt="laptop2"></a>
+                <a href="{{url_for('products',name='Mobile')}}"><img src="../static/images/mobiles/mobile3.png" alt="mobile3"></a>
             </div>
             <div class="card">
-                <a href="{{url_for('products',name='Watch')}}"><img src="../static/images/watch2.png" alt="watch2"></a>
+                <a href="{{url_for('products',name='Watch')}}"><img src="../static/images/watches/watch2.png" alt="watch2"></a>
             </div>
             <div class="card">
-                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/kids3.png" alt="kids3"></a>
+                <a href="{{url_for('products',name='Toys')}}"><img src="../static/images/toys/kids3.png" alt="kids3"></a>
             </div>
         </div>
     </section>
