--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -74,12 +74,12 @@
 }
 
 .hamburger-box.active div:first-child{
-    margin-top: 1rem;
-    transform: rotate(50deg);
+    margin-top: .9rem;
+    transform: rotate(47deg);
 }
 
 .hamburger-box.active div:nth-child(2){
-    margin-top: -1rem;
+    margin-top: -.95rem;
     transform: rotate(-50deg);
 }
 
