hand bags section added

--- a/static/css/specific_products.css
+++ b/static/css/specific_products.css
@@ -37,6 +37,7 @@
     text-decoration: none;
     display: flex;
     flex-direction: column;
+    gap: 7px;
     justify-content: space-between;
     max-height: 310px;
     min-height: 310px;
