--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 <header id="navigation">
     <div class="nav-bar">
         <div id="logo">
-            <img src="../static/images/v-logo.jpg" alt="Maruthi">
+            <a href="{{url_for('index')}}"><img src="../static/images/v-logo.jpg" alt="Maruthi"></a>
             <div class="hamburger-box" onclick="toggleMenu()">
                 <div></div>
                 <div></div>
