--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -22,7 +22,7 @@
     justify-content: space-between;
 }
 
-#logo img{
+#logo a img{
     height: 3.4rem;
 }
 
@@ -64,7 +64,7 @@
     margin-left: auto;
     flex-direction: column;
     margin-top: -2.6rem;
-    opacity: 0;
+    display: none;
 }
 
 .hamburger-box div{
