--- a/templates/specific_products.html
+++ b/templates/specific_products.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../static/css/footer.css">
     <link rel="stylesheet" href="../static/css/specific_products.css">
     {% include 'bootstrap_css.html' %}
+    <link rel="shortcut icon" href="../static/images/v-logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body id="body">
